--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,61 +1,70 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
- <link rel="stylesheet" href="{{asset('css/searchForm-style.css')}}">
-        {% endblock %}
-{% block title %}Hello MainController!{% endblock %}
+	<link rel="stylesheet" href="{{asset('css/searchForm-style.css')}}">
+{% endblock %}
+{% block title %}Hello MainController!
+{% endblock %}
 
 {% block body %}
-    {% include "fragments/_nav.html.twig" %}
-    {% include "fragments/_flash_message.html.twig" %}
-    {% if app.request.query.get('message') %}
-    <div class="alert alert-warning">
-        {{ app.request.query.get('message') }}
-    </div>
-{% endif %}
-     {% if is_granted ('IS_AUTHENTICATED_FULLY') %}   
-       <div class="container-fluid d-flex justify-content-end">
-            <div class="col-3 p-3 homesquare shadow rounded bg-white my-4">
-                <p><strong>Participant</strong>: {{app.user}}</p>
-                <p><strong>Date du jour</strong>: {{ "now" | date('d/m/Y') }}</p>
-            </div>
-        </div>
-    {% endif %}
-    <div class="row">
-        <div class="col-6 offset-3">
-            {% include "fragments/_flash_message.html.twig" %}
-        </div>
-    </div>
-        
-    {% include "trip/_search-form.html.twig" %}
-    <div class="container-fluid p-3">
-    <div class="row">
-        <div class="col-8 offset-2">
-            <div class="table-responsive">
-                <table class="table table-hover table-bordered table-striped">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>Nom de la sortie</th>
-                            <th>Date de la sortie</th>
-                            <th>Clôture</th>
-                            <th>Inscrits/Places</th>
-                            <th>État</th>
-                            <th>Inscrit</th>
-                            <th>Organisateur</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody id="trips-tbody">
-                        {% include 'main/_trips_tbody.html.twig' %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="add-trip">
-    <a class="btn btn-secondary" href="{{ path('app_trip_new') }}">Ajouter</a>
-</div>
-    {% block javascripts %}
-            <script src="{{asset('js/filter.js')}}"></script>
-        {% endblock %}
+	{% include "fragments/_nav.html.twig" %}
+	{% include "fragments/_flash_message.html.twig" %}
+	{% if app.request.query.get('message') %}
+		<div class="alert alert-warning">
+			{{ app.request.query.get('message') }}
+		</div>
+	{% endif %}
+	{% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+		<div class="container-fluid d-flex justify-content-end">
+			<div class="col-3 p-3 homesquare shadow rounded bg-white my-4">
+				<p>
+					<strong>Participant</strong>:
+					{{app.user}}</p>
+				<p>
+					<strong>Date du jour</strong>:
+					{{ "now" | date('d/m/Y') }}</p>
+			</div>
+		</div>
+	{% endif %}
+	<div class="row">
+		<div class="col-6 offset-3">
+			{% include "fragments/_flash_message.html.twig" %}
+		</div>
+	</div>
+
+	{% include "trip/_search-form.html.twig" %}
+	<div class="container-fluid p-3">
+		<div class="row">
+			<div class="col-8 offset-2">
+				<div class="table-responsive">
+					<table class="table table-hover table-bordered table-striped">
+						<thead class="table-dark">
+							<tr>
+								<th>Nom de la sortie</th>
+								<th>Date de la sortie</th>
+								<th>Clôture</th>
+								<th>Inscrits/Places</th>
+								<th>État</th>
+								<th>Inscrit</th>
+								<th>Organisateur</th>
+								<th>Action</th>
+							</tr>
+						</thead>
+						<tbody id="trips-tbody">
+							{% include 'main/_trips_tbody.html.twig' %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	{# Pagination Controls #}
+	<div class="pagination">
+		{{ knp_pagination_render(pagination) }}
+	</div>
+	<div class="add-trip">
+		<a class="btn btn-secondary" href="{{ path('app_trip_new') }}">Ajouter</a>
+	</div>
+	{% block javascripts %}
+		<script src="{{asset('js/filter.js')}}"></script>
+	{% endblock %}
 {% endblock %}
